# mcst-fruid

./: .gitignore  LICENSE  Makefile  README  cksum-ops.c  cksum-ops.h  devtree-ops.c  devtree-ops.h  dict-ops.c  dict-ops.h  errors.c  errors.h  fruid-ops.c  fruid-ops.h  get-devtree.c  get-fruid.c  i2c-ops.c  i2c-ops.h  mcst-fruid.c  mcst-fruid.service  mcst-fruid_0.1.bb  meson.build  meson_options.txt  spi-ops-mtd.c  spi-ops-spidev.c  spi-ops.h
files/: Makefile  README  devtree-ops.c  errors.c  fruid-ops.c  fruid-ops.h  i2c-ops.h  mcst-fruid.c  spi-ops-spidev.c
subprojects/: libreimu.wrap
